# build/swagger.json
@@ -195,7 +195,7 @@
 					}
 				},
 				"description": "Get all users",
-				"summary": "Testing protected route(uses http only cookies)",
+				"summary": "Testing protected route example 1",
 				"tags": [
 					"User"
 				],
@@ -220,8 +220,8 @@
 							"type": "object"
 						}
 					},
-					"401": {
-						"description": "Unauthorized"
+					"400": {
+						"description": "Invalid Form Data"
 					},
 					"500": {
 						"description": "Internal Server Error"
@@ -269,19 +269,56 @@
 					}
 				},
 				"description": "Get all users using jwt token",
-				"summary": "Testing protected route(using jwt token)",
+				"summary": "Testing protected route example 2",
 				"tags": [
 					"User"
 				],
 				"security": [
 					{
-						"jwt": []
-					},
-					{
 						"BearerAuth": []
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/user/uploadImage": {
+			"post": {
+				"operationId": "UploadImage",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Image uploaded successfully",
+						"schema": {
+							"type": "string"
+						}
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"consumes": [
+					"multipart/form-data"
+				],
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "formData",
+						"name": "description",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"in": "formData",
+						"name": "file",
+						"required": true,
+						"type": "file"
+					}
+				]
 			}
 		},
 		"/random": {
